--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/scss/style.css">
 
   </head>
   <body>
@@ -46,17 +47,20 @@
           </div>
           <div class="col-8 bg-light">
             <img src="../assets/image/bg.jpg" alt="" class="w-100 h-75">
-            <div class="progress mt-3">
-              <div class="progress-bar bg-dark" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+            <audio src="../assets/file/They-Said-Touliver-Binz.mp3"></audio>
+            <input type="range" class="timeline" max="100" value="0">
             <center>
-              <div class="group-button-action" style="position: relative">
-                <i class="bi bi-arrow-left" style="font-size: 35px;"></i>
-                <i class="bi bi-arrow-left-short" style="font-size: 35px;"></i>
-                <i class="bi bi-play-circle btn-play-music" style="font-size: 35px;position: relative" data-toggle="tooltip" data-original-title="Play"></i>
-                <i class="bi bi-stop-fill" style="font-size: 35px;"></i>
-                <i class="bi bi-arrow-right-short" style="font-size: 35px;"></i>
-                <i class="bi bi-arrow-right" style="font-size: 35px;"></i>
+              <div class="group-button-action mt-3" style="position: relative">
+                <button><i class="bi bi-skip-backward-circle-fill" style="font-size: 35px;"></i></button>
+                <button><i class="bi bi-arrow-left-short" style="font-size: 35px;"></i></button>
+                <button id="btn-play-music" data-status="pause"><i class="bi bi-play-circle" style="font-size: 35px"></i></button>
+                <button><i class="bi bi-arrow-right-short" style="font-size: 35px;"></i></button>
+                <button><i class="bi bi-skip-forward-circle-fill" style="font-size: 35px;"></i></button>
+                <button><i class="bi bi-volume-mute-fill" style="font-size: 35px;"></i></button>
+                <button class="btn-vulumn" style="position: relative;">
+                  <i class="bi bi-volume-up-fill" style="font-size: 35px;"></i>
+                  <div class="tooltip"><input type="range" class="timeline" max="100" value="0"></div>
+                </button>
               </div>
             </center>
           </div>
@@ -213,7 +217,6 @@
 
       </div>
     <!-- <footer></footer> -->
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
