--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -2,8 +2,8 @@ button {
   border: none !important;
   border-radius: 45%;
   outline: none;
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   margin-left: auto;
   background-color: #f1f3f4;
   margin-left: 7px;
@@ -21,7 +21,7 @@ button:focus {
   /* width: calc(100% - (var(--player-button-width) + var(--sound-button-width) + var(--space))); */
   width: 100%;
   height: .2em;
-  background-color: #ffffff;
+  background-color: #d0d4d6;
   border-radius: 5px;
   background-size: 0% 100%;
   background-image: linear-gradient(#DE5E97, #DE5E97);
@@ -67,43 +67,6 @@ button:focus {
 .timeline:hover::-webkit-slider-thumb {
   opacity: 1;
 }
-/* 
-.timeline::-moz-range-thumb:hover {
-  background-color: #3f9443;
-}
-
-.timeline:hover::-moz-range-thumb {
-  opacity: 1;
-} */
-
-/* .timeline::-ms-thumb:hover {
-  background-color: #17ad0a;
-}
-
-.timeline:hover::-ms-thumb {
-  opacity: 1;
-} */
-/* 
-.timeline::-webkit-slider-runnable-track {
-  -webkit-appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-}
-
-.timeline::-moz-range-track {
-  -webkit-appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-}
-
-.timeline::-ms-track {
-  -webkit-appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-} */
 
 .btn-vulumn {
   background: #ececec;
@@ -178,13 +141,263 @@ button:focus {
 }
 
 #background-image {
-  height: 600px !important;
-  width: 100%;
+  height: 400px !important;
+  width: 50%;
+  margin: 0px auto;
+  border-radius: 2%;
+  float: none;
+  display: block;
+  margin-top: 100px;
+}
+
+#volunm-range {
+  -webkit-appearance: none;
+  width: 80%;
+  height: .3em;
+  position: absolute;
+  border-radius: 15%;
+}
+
+#volunm-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: .7em;
+  height: .7em;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 1;
+  transition: all .1s;
+  background-color: #eb0000;
+}
+
+.list-tab {
+  border-right: 1px solid rgb(201, 1, 1);
+}
+
+.list-tab li{
+  list-style-type: none;
+  padding: 5px 0px 5px 0px;
+  list-style-position:inside;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
 
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: black;
+  /* background-color: black; */
+}
+
+#list-song {
+  word-break: break-all;
+}
+
+.items {
+  width: 100%;
+  /* background: #fffffe; */
+  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
+  /* border-top: 10px solid #0B5AA2; */
+  color: rgb(0, 0, 0);
+}
+
+.items-head p {
+  padding: 5px 20px;
+  margin: 10px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.items-head hr {
+  width: 20%;
+  margin: 0px 30px;
+  border: 1px solid #0B5AA2;
+}
+
+.items-body {
+  padding: 10px;
+  margin: 10px;
+  display: grid;
+  grid-gap: 10px;
+}
+
+.items-body-content {
+  padding: 10px;
+  padding-right: 0px;
+  display: grid;
+  grid-template-columns: 10fr 1fr;
+  font-size: 13px;
+  grid-gap: 10px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.items-body-content:hover {
+  border-radius: 15px;
+  border: 1px solid #0B5AA2;
+}
+
+.items-body-content i {
+  align-self: center;
+  font-size: 15px;
+  color: #000000;
+  font-weight: bold;
+  animation: icon 1.5s infinite forwards;
+}
+
+@keyframes icon {
+  0%, 100% {
+    transform: translate(0px);
+  }
+  50% {
+    transform: translate(3px);
+  }
+}
+
+#left-menu {
+  background-color: #f8f4f4;
+}
+
+.tilesWrap {
+	padding: 0;
+	margin: 50px auto;
+	list-style: none;
+	text-align: center;
+}
+.tilesWrap li {
+	display: inline-block;
+	width: 20%;
+	min-width: 200px;
+	max-width: 230px;
+	padding: 80px 20px 40px;
+	position: relative;
+	vertical-align: top;
+	margin: 10px;
+	font-family: 'helvetica', san-serif;
+	min-height: 25vh;
+	background: #262a2b;
+	border: 1px solid #252727;
+	text-align: left;
+}
+.tilesWrap li h2 {
+	font-size: 114px;
+	margin: 0;
+	position: absolute;
+	opacity: 0.2;
+	top: 50px;
+	right: 10px;
+	transition: all 0.3s ease-in-out;
+}
+.tilesWrap li h3 {
+	font-size: 20px;
+	color: #b7b7b7;
+	margin-bottom: 5px;
+}
+.tilesWrap li p {
+	font-size: 16px;
+	line-height: 18px;
+	color: #b7b7b7;
+	margin-top: 5px;
+}
+.tilesWrap li button {
+	background: transparent;
+	border: 1px solid #b7b7b7;
+	padding: 10px 20px;
+	color: #b7b7b7;
+	border-radius: 3px;
+	position: relative;
+	transition: all 0.3s ease-in-out;
+	transform: translateY(-40px);
+	opacity: 0;
+	cursor: pointer;
+	overflow: hidden;
+}
+.tilesWrap li button:before {
+	content: '';
+	position: absolute;
+	height: 100%;
+	width: 120%;
+	background: #b7b7b7;
+	top: 0;
+	opacity: 0;
+	left: -140px;
+	border-radius: 0 20px 20px 0;
+	z-index: -1;
+	transition: all 0.3s ease-in-out;
+	
+}
+.tilesWrap li:hover button {
+	transform: translateY(5px);
+	opacity: 1;
+}
+.tilesWrap li button:hover {
+	color: #262a2b;
+}
+.tilesWrap li button:hover:before {
+	left: 0;
+	opacity: 1;
+}
+.tilesWrap li:hover h2 {
+	top: 0px;
+	opacity: 0.6;
+  color: #ffffff;
+}
+
+.tilesWrap li:before {
+	content: '';
+	position: absolute;
+	top: -2px;
+	left: -2px;
+	right: -2px;
+	bottom: -2px;
+	z-index: -1;
+	background: #fff;
+	transform: skew(2deg, 2deg);
+}
+.tilesWrap li:after {
+	content: '';
+	position: absolute;
+	width: 40%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: rgba(189, 18, 18, 0.02);
+}
+.tilesWrap li:nth-child(1):before {
+	background: #C9FFBF;
+  background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
+  background: linear-gradient(to right, #FFAFBD, #C9FFBF);
+}
+
+.tilesWrap li:nth-child(2):before {
+	background: #f2709c;
+  background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
+  background: linear-gradient(to right, #ff9472, #f2709c);
+}
+
+.tilesWrap li:nth-child(3):before {
+	background: #c21500;
+  background: -webkit-linear-gradient(to right, #ffc500, #c21500);
+  background: linear-gradient(to right, #ffc500, #c21500);
+}
+.tilesWrap li:nth-child(4):before {
+	background: #FC354C;
+  background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
+  background: linear-gradient(to right, #0ABFBC, #FC354C);
+}
+
+.playlist-song {
+  margin-top: 100px;
+}
+
+.playlist-song div img {
+  height: 80px;
+  width: 150px;
+  margin: 0px auto;
+  border-radius: 2%;
+  float: none;
+  display: block;
 }
