--- a/views/index.html
+++ b/views/index.html
@@ -10,15 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/scss/style.css">
-
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   </head>
   <body>
       
     <!-- <header></header> -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand" href="#">Hidden brand</a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -36,18 +33,129 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           </form>
         </div>
-      </nav>
+      </nav> -->
     <!-- <header></header> -->
 
     <!-- <main></main> -->
-      <div class="container-fluid mt-3 mb-3">
+      <div class="container-fluid mt-2">
         <div class="row">
-          <div class="col-2 bg-primary">
+          <div class="col-3">
+            <!-- <div class="items">
+              <div class="items-head">
+                <p>UX DESIGN</p>
+                <hr>
+              </div>
+              
+              <div class="items-body">
+                <div class="items-body-content">
+                  <span>Web Usabilty Testing</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>Web Usabilty Testing</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>Design of Everyday Things</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>Practical Empathy: For Collaboration & Creativity in Your Work</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                <div class="items-body-content">
+                  <span>About Face: The Essentials of Interaction Design</span>
+                  <i class="bi bi-arrow-right"></i>
+                </div>
+                
+              </div>
+            </div> -->
           </div>
-          <div class="col-8 bg-light">
-            <img src="../assets/image/bg.jpg" alt=""  id="background-image">
+          <div class="col-6 mb-5">
+            <!-- <img src="../assets/image/bg.jpg" alt="" id="background-image"> -->
+            <div class="image-song" value="a">
+              <div><img src="../assets/image/bg.jpg" alt="" id="background-image"></div>
+              <div><img src="../assets/image/25.png" alt="" id="background-image"></div>
+              <div><img src="../assets/image//bbb.png" alt="" id="background-image"></div>
+              <!-- <div><img src="../assets/image/bg.jpg" alt="" id="background-image"></div>
+              <div><img src="../assets/image/25.png" alt="" id="background-image"></div>
+              <div><img src="../assets/image//bbb.png" alt="" id="background-image"></div> -->
+            </div>
+            <div class="playlist-song">
+              <div><img src="../assets/image/bg.jpg"></div>
+              <div><img src="../assets/image/25.png"></div>
+              <div><img src="../assets/image//bbb.png"></div>
+              <!-- <div><img src="../assets/image/bg.jpg"></div>
+              <div><img src="../assets/image/25.png"></div>
+              <div><img src="../assets/image//bbb.png"></div> -->
+            </div>
+
+            <!-- <ul class="tilesWrap">
+              <li>
+                <h2>01</h2>
+                <h3>Title 1</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting   
+                  industry. Lorem Ipsum has been the industry's standard dummy text ever 
+                  since the 1500s.
+                </p>
+                <button><i class="bi bi-arrow-right"></i></button>
+              </li>
+              <li>
+                <h2>02</h2>
+                <h3>Title 2</h3>
+                <p>
+                  When an unknown printer took a galley of type and scrambled it to make 
+                  a type specimen book. It has survived not only five centuries.
+                </p>
+                <button><i class="bi bi-arrow-right"></i></button>
+              </li>
+              <li>
+                <h2>03</h2>
+                <h3>Title 3</h3>
+                <p>
+                  But also the leap into electronic typesetting, remaining essentially 
+                  unchanged. It was popularised in the 1960s.
+                </p>
+                <button><i class="bi bi-arrow-right"></i></button>
+              </li>
+              <li>
+                <h2>04</h2>
+                <h3>Title 4</h3>
+                <p>
+                  With the release of Letraset sheets containing Lorem Ipsum passages,  
+                  and more recently with desktop publishing software like Aldus PageMaker 
+                  including versions of Lorem Ipsum.
+                </p>
+                <button><i class="bi bi-arrow-right"></i></button>
+              </li>
+            </ul> -->
           </div>
-          <div class="col-2 bg-primary">
+          <div class="col-3" id="list-song">
           </div>
         </div>
       </div>
@@ -59,20 +167,26 @@
         <audio src="../assets/file/They-Said-Touliver-Binz.mp3"></audio>
         <input type="range" class="timeline" max="100" value="0" style="position: absolute; top: 0;">
         <div class="row">
-          <div class="col-4 show-music-in-small">
-            <img src="../assets/image/bg.jpg" alt="" height="70%" width="30%">
+          <div class="col-4 show-music-in-small" style="display: flex;">
+            <img src="../assets/image/bg.jpg" class="img-small" alt="" height="60px" width="80px">
+            <div class="group-des-song" style="margin-left: 20px;">
+              <h5 class="name-song">They Said</h5>
+              <h6 class="name-singer">Binz</h6>
+            </div>
           </div>
           <div class="col-4">
             <center>
-              <button id="btn-shuffle-song"><i class="bi bi-shuffle" style="font-size: 28px;"></i></button>
-              <button id="btn-pre-song"><i class="bi bi-arrow-left-short" style="font-size: 28px;"></i></button>
-              <button id="btn-play-music"><i class="bi bi-play-circle" style="font-size: 28px"></i></button>
-              <button id="btn-next-song"><i class="bi bi-arrow-right-short" style="font-size: 28px;"></i></button>
-              <button id="btn-repeat"><i class="bi bi-arrow-repeat" style="font-size: 28px;"></i></button>
+              <div class="button-handle-song mt-2">
+                <button id="btn-shuffle-song"><i class="bi bi-shuffle" style="font-size: 28px;"></i></button>
+                <button id="btn-pre-song"><i class="bi bi-arrow-left-short" style="font-size: 28px;"></i></button>
+                <button id="btn-play-music"><i class="bi bi-play-circle" style="font-size: 28px"></i></button>
+                <button id="btn-next-song"><i class="bi bi-arrow-right-short" style="font-size: 28px;"></i></button>
+                <button id="btn-repeat"><i class="bi bi-arrow-repeat" style="font-size: 28px;"></i></button>
+              </div>
             </center>
           </div>
           <div class="col-4">
-            <button class="btn-volumn" style="position: relative;">
+            <button class="btn-volumn mt-2" style="position: relative; left: 500px;">
               <i class="bi bi-volume-up-fill btn-volumn-m" style="font-size: 28px;"></i>
               <div class="tooltip">
                 <output style="position:absolute;" id="myValue"></output>
@@ -85,134 +199,16 @@
     </footer>
     <!-- GROUP BUTTON HANDLE PLAY MUSIC -->
 
-    <!-- <footer></footer> -->
-      <!-- <div class="container-fluid my-5">
-
-        <footer
-                class="text-center text-lg-start text-white"
-                style="background-color: #1c2331"
-                >
-          <section
-                  class="d-flex justify-content-between p-4"
-                  style="background-color: #6351ce"
-                  >
-            <div class="me-5">
-              <span>Get connected with us on social networks:</span>
-            </div>
-
-            <div>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-google"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-linkedin"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-github"></i>
-              </a>
-            </div>
-          </section>
-
-          <section class="">
-            <div class="container text-center text-md-start mt-5">
-              <div class="row mt-3">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                  <h6 class="text-uppercase fw-bold">Company name</h6>
-                  <hr
-                      class="mb-4 mt-0 d-inline-block mx-auto"
-                      style="width: 60px; background-color: #7c4dff; height: 2px"
-                      />
-                  <p>
-                    Here you can use rows and columns to organize your footer
-                    content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit.
-                  </p>
-                </div>
-
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                  <h6 class="text-uppercase fw-bold">Products</h6>
-                  <hr
-                      class="mb-4 mt-0 d-inline-block mx-auto"
-                      style="width: 60px; background-color: #7c4dff; height: 2px"
-                      />
-                  <p>
-                    <a href="#!" class="text-white">MDBootstrap</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">MDWordPress</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">BrandFlow</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">Bootstrap Angular</a>
-                  </p>
-                </div>
-
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                  <h6 class="text-uppercase fw-bold">Useful links</h6>
-                  <hr
-                      class="mb-4 mt-0 d-inline-block mx-auto"
-                      style="width: 60px; background-color: #7c4dff; height: 2px"
-                      />
-                  <p>
-                    <a href="#!" class="text-white">Your Account</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">Become an Affiliate</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">Shipping Rates</a>
-                  </p>
-                  <p>
-                    <a href="#!" class="text-white">Help</a>
-                  </p>
-                </div>
-
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                  <h6 class="text-uppercase fw-bold">Contact</h6>
-                  <hr
-                      class="mb-4 mt-0 d-inline-block mx-auto"
-                      style="width: 60px; background-color: #7c4dff; height: 2px"
-                      />
-                  <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-                  <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-                  <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                  <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <div
-              class="text-center p-3"
-              style="background-color: rgba(0, 0, 0, 0.2)"
-              >
-            © 2020 Copyright:
-            <a class="text-white" href="https://mdbootstrap.com/"
-              >MDBootstrap.com</a
-              >
-          </div>
-        </footer>
-
-      </div> -->
-    <!-- <footer></footer> -->
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="../assets/js/main.js"></script>
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+    <!-- <script type="text/javascript" src="../slick/slick.min.js"></script> -->
   </body>
 </html>
